Fix menu button mobile

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -29,6 +29,10 @@
         display: block;
     }
 
+    #nav li a {
+        width: 100%;
+    }
+
     #nav .subnav {
         position: initial;
         background-color: #000;
